--- a/client/styles.css
+++ b/client/styles.css
@@ -1,45 +1,44 @@
 body {
-    background-image: url(./background.jpg);
+  background-image: url(./background.jpg);
 }
 div {
-    padding: 10px;
-    border: 1px solid black;
-    background-color: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
+  padding: 10px;
+  border: 1px solid black;
+  background-color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
 #main-table {
-    border: 1px solid black;
-    
+  border: 1px solid black;
 }
 #board-cell {
-    position: relative;
-    width: 50%;
+  position: relative;
+  width: 50%;
 }
 #board {
-    width: 100px;
-    background-color: white;
-    border-collapse: collapse;
-    
+  width: 100px;
+  background-color: white;
+  border-collapse: collapse;
 }
-#board td, #board th {
-    border: 1px solid black;
-    text-align: center;
+#board td,
+#board th {
+  border: 1px solid black;
+  text-align: center;
 }
 #board tr:first-child td {
-    border-top: 0;
+  border-top: 0;
 }
 #board tr:last-child td {
-    border-bottom: 0;
+  border-bottom: 0;
 }
 #board tr td:first-child,
 #board tr th:first-child {
-    border-left: 0;
+  border-left: 0;
 }
 #board tr td:last-child,
 #board tr th:last-child {
-    border-right: 0;
+  border-right: 0;
 }
